--- a/style.css
+++ b/style.css
@@ -15,6 +15,19 @@ body {
     margin: 0;
 }
 
+/*Utility*/
+.d-price {
+    color: var(--bg-sale);
+    font-weight: bold;
+}
+
+.o-price {
+    text-decoration: line-through;
+    font-size: 11px;
+
+}
+
+/*Header*/
 .container {
     display: flex;
     justify-content: space-around;
@@ -37,4 +50,48 @@ body {
     .user {
         padding: 0.5rem;
     }
+}
+
+/*Main*/
+.look-book {
+    display: flex;
+    flex-direction:column;
+    margin: 2rem 8rem;
+    
+    .row {
+        display: flex;
+        justify-content: space-between;
+        gap: 1rem;
+        margin-bottom: 2rem;
+        
+        div {
+            flex-grow: 1;
+            width: 33%;
+
+            img {
+                width: 100%
+            }
+        };
+    }
+
+}
+
+section {
+    gap: 0;
+
+h2 {
+    text-transform: uppercase;
+    margin: 0;
+    font-size: 13px;
+    padding: 0;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+
+   
+}
+
 }
