--- a/style.css
+++ b/style.css
@@ -64,15 +64,15 @@ body {
     .row {
         display: flex;
         justify-content: space-between;
-        gap: 1rem;
         margin-bottom: 2rem;
+        flex-wrap: wrap;
         
         div {
-            flex-grow: 1;
+
             width: 33%;
 
             img {
-                width: 100%
+                width: 98%
             }
         };
     }
@@ -82,6 +82,7 @@ body {
 .look {
     min-width: 100%;
     position: relative;
+    display: inline-block;
 
     i {
         background-color: var(--main-lighter);
@@ -114,6 +115,7 @@ body {
 
 section {
     gap: 0;
+    margin-bottom: 2rem;
 
 h2 {
     text-transform: uppercase;
@@ -131,6 +133,13 @@ p {
 }
 
 }
+
+.look:hover .img1 {
+    background-image: url("./boolando_images/img/1b.webp");
+    background-size: cover;
+    z-index: 100;
+}
+
 
 /*FOOTER*/
 
